Kubernetes/backend/user-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-user-deployment
  namespace: user-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-api
      component: pod
  template:
    metadata:
      labels:
        app: user-api
        component: pod
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - user-api
            topologyKey: "kubernetes.io/hostname"
      containers:
        - image: registry.gitlab.com/startfleet/api-user-management:v1.1.4
          imagePullPolicy: Always
          name: user-api
          ports:
          - containerPort: 3000
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
              readOnly: true
      imagePullSecrets:
        - name: user-api-registry-secret
      volumes:
        - name: config-volume
          configMap:
            name: user-api-configmap
