Kubernetes/backend/user-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-api-svc
  namespace: user-api
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: user-api
