Kubernetes/backend/user-api/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-user-ingress
  namespace: user-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - user.api.startfleet.ovh
    secretName: user-api-tls
  rules:
  - host: user.api.startfleet.ovh
    http:
      paths:
      - path: /
        backend:
          serviceName: user-api-svc
          servicePort: 80
